<?xml version="1.0" encoding="utf-8"?>
<resources>

   	<string name="app_name">Scavanger Hunt</string>
    <string name="action_settings">Settings</string>
    <string name="Quit">Quit</string>
    <string name="Help">Help</string>
    <string name="Player_challenge">Player challenge</string>
    <string name="Team_challenge">Team challenge</string>
    <string name="Settings">Settings</string>
    <string name="Logo">Logo</string> 
    <string name="Logo_preloader">Logo</string>
    <string name="title_activity_splash_main">MainActivity</string>
    <string name="Account">Account</string>
    <string name="Score">Score</string>
    <string name="Change_color">Change your color</string>
    <string name="Track">Track</string>
    <string name="Swift">"Swift"</string>
    <string name="Act">Act</string>
    <string name="Email">Email</string>
    <string name="Password">Choose your password.</string>
    <string name="PasswordInput">Password.</string>
    <string name="PasswordHint">At least eight characters long.</string>
    <string name="Login">Login</string>
    <string name="New_to_Scavenger_Hunt_Register_here">New to Scavenger Hunt? Register here</string>
    <string name="description">description</string>
    <string name="Full_Name">Full Name</string>
    <string name="reg_fullname">Please enter your Full Name</string>
    <string name="reg_email">Please enter your E-Mail Address</string>
    <string name="Register_New_Account">Register New Account</string>
    <string name="Already_has_account_Login_here">Do you have an Account? Login here</string>
    <string name="Video">Video</string>
    <string name="Show_me">How to play</string>
    <string name="GameHelp">Help</string>

    <string name="HelpScreen">
        \nTry to ink more active spots than the others by reaching it!\n        
		\n\n\nBe the first one who visits all spots! Choose the order yourself.\n		
		\n\n\nAll the spots are disabled, except one. As soon as the only active spot is reached, it will be disabled and another one will become active. Try to reach as many as possible!
	</string>
    <string name="facebook_app_id">1588288221399803</string>
    
	<string name="HelpTrack">TRACK</string>
    <string name="HelpSwift">\nSWIFT</string>
    <string name="HelpAct">\n\nACT</string>   
    <string name="Winner">Winner</string>    
    
    
    
</resources>
