<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE RelativeLayout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.menu.MainActivity" >
    

    <Button
        android:id="@+id/quit"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_toRightOf="@+id/team"
        android:layout_toEndOf="@+id/team"
        android:background="@drawable/quit_design"
        android:text="@string/Quit"
        android:textColor="#FFFFFF" />

    <ImageView
        android:id="@+id/settings"
        android:contentDescription="@string/Settings"
        android:layout_width="40dip"
        android:layout_height="40dip"
        android:layout_alignTop="@+id/quit"
        android:layout_toLeftOf="@+id/team"
        android:layout_toStartOf="@+id/team"
        android:src="@drawable/settings1" />

    <Button
        android:id="@+id/team"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:layout_above="@+id/quit"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="114dp"
        android:background="@drawable/button_design"
        android:text="@string/Team_challenge" />

    <Button
        android:id="@+id/player"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:layout_above="@+id/team"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_design"
        android:text="@string/Player_challenge" />

</RelativeLayout>