<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE RelativeLayout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.menu.GameSetHelp" >
    
    <TextView
        android:id="@+id/HelpTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/logo"
        android:layout_alignTop="@+id/HelpScreen"
        android:layout_marginTop="-10dp"
        android:ems="19"
        android:text="@string/HelpTrack"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/HelpSwift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/logo"
        android:layout_alignTop="@+id/HelpScreen"
        android:layout_marginTop="56dp"
        android:ems="19"
        android:text="@string/HelpSwift"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/HelpAct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/logo"
        android:layout_below="@+id/HelpSwift"
        android:layout_marginTop="32dp"
        android:ems="19"
        android:text="@string/HelpAct"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/HelpScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/HelpTrack"
        android:layout_centerVertical="true"
        android:ems="20"
        android:text="@string/HelpScreen" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/logo"
        android:layout_centerHorizontal="true"
        android:text="Winner Test" />
    
</RelativeLayout>
