<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE RelativeLayout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.menu.Settings" >
    
    <ImageView
        android:id="@+id/logo"
        android:contentDescription="@string/Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/logo1" />

    <Button
        android:id="@+id/score"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/account"
        android:layout_alignStart="@+id/account"
        android:layout_below="@+id/account"
        android:layout_marginTop="19dp"
        android:background="@drawable/button_design"
        android:text="@string/Score" />

    <Button
        android:id="@+id/account"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="106dp"
        android:background="@drawable/button_design"
        android:text="@string/Account" />

</RelativeLayout>
