<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#ffffff">
 
        <!--  Header Starts-->
        <LinearLayout android:id="@+id/header"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient"
    android:paddingTop="35dip"
    android:paddingBottom="35dip">
        <!-- Logo Start-->
       <ImageView
        android:id="@+id/logo"
        android:contentDescription="@string/Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        <!-- Logo Ends -->
</LinearLayout>
        <!--  Header Ends -->
 
      <!-- Footer Start -->
<LinearLayout android:id="@+id/footer"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="90dip"
    android:background="@drawable/gradient"
    android:layout_alignParentBottom="true">
</LinearLayout>
<!-- Footer Ends -->
 
        <!-- Login Form -->
        <LinearLayout
          
         
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="10dip"
          android:layout_below="@id/header">
          <!--  Email Label -->
          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/Email"/>
          <EditText android:layout_width="fill_parent"
              	android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"/>
          <!--  Password Label -->
          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/PasswordInput"/>
          <EditText android:layout_width="fill_parent"
              	android:inputType="textWebPassword"
              	android:gravity="start"
              	android:ellipsize="start"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:password="true"/>
          <!-- Login button -->
          <Button android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/Login"/>
          <!-- Link to Registration Screen -->
          <TextView android:id="@+id/link_to_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:layout_marginBottom="40dip"
                android:text="@string/New_to_Scavenger_Hunt_Register_here"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="#0b84aa"/>
          
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.facebook.widget.LoginButton
        android:id="@+id/authButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"/>
 
</LinearLayout>
<!-- Login Form Ends -->
 
  </RelativeLayout>
</ScrollView>